[B]1.1.13[/B]
- HEVC filter added to settings
- filmyto polish source added
- foxx fix
- alluc polish added

[B]1.1.12[/B]
- added imdark
- gave alluc individual ids per language
- updated seriesonline url
- updated putlocker
- added playback setting to toggle container refresh

[B]1.1.11[/B]
- updated primewire
- fixed sezonlukdizi (geo-blocked in some locations)
- updated rlsbb url (not tested)
- updated watchfree and projectfree
- fixed pubfilmto
- bugfix in movies.py
- update french texts
- scenedown fix

[B]1.1.10[/B]
- fixed kingmovies
- removed pmovies and watch5s
- streamflix url fix
- fixed streamlord
- changed fanarttv search behavior to execute also without personal api key

[B]1.1.9[/B]
- updated streamflix url
- set default action to Directory
- added gostream source
- added container refreshs to syncronize watched status with Trakt

[B]1.1.8[/B]
- CF fix (thanks to gujal)
- added alluc to DE sources
- new fanart api key
- deleted hidded option from non password fields in settings.xml

[B]1.1.7[/B]
- Updated dizigold urls
- Fixed streamlord
- Updated and fixed seriesonline

[B]1.1.6[/B]
- Added alluc provider

[B]1.1.5[/B]
- Dayt update
- Onseries bug fix
- Allow users to hide  movies currently in theaters (released within the last 90 days), 
  except in the following sections: Trakt/IMDB Lists, In Theatres, Search

[B]1.1.4[/B]
- Kingmovies fix
- Onmovies update

[B]1.1.3[/B]
- Pubfilm fix
- Kingmovies fix
- Juicy Codes decoder

[B]1.1.2[/B]
- Trakt workaround in tools for Leia
- Update translations
- Code cosmetics

[B]1.1.1[/B]
- Trakt fixes
- Updates existing providers
- Added new provider

[B]1.1.0[/B]
- Official Release
- Fix trakt support
- Updated existing providers
- Added new providers
- Artwork