@@ -1,3 +1,10 @@
+[B]1.1.14[/B]
+- added flixtor
+- updated movieshd aka flixanity
+- Films/TV Movies populated list
+- filiser url resolver fixed
+- updates on DE-providers
+
 [B]1.1.13[/B]
 - HEVC filter added to settings
 - filmyto polish source added
